# pyinitials

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
main/: codelimit.md  report.json
pyinitials/: __init__.py  pyinitials.py
tests/: test_pyinitials.py
