[tool.poetry]
name = "pyinitials"
version = "1.0.0"
description = ""
authors = ["Rob van der Leek <robvanderleek@gmail.com>"]
readme = "README.md"
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
